added better config

--- a/02-run.ipynb
+++ b/02-run.ipynb
@@ -12,6 +12,9 @@
     "from assignment.llm import LLMProvider\n",
     "\n",
     "from IPython.display import clear_output\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
     "\n",
     "config = ChatConfig(\n",
     "    embedding_model=\"BAAI/bge-small-en-v1.5\",\n",
@@ -19,13 +22,9 @@
     "    system_message=\"You are a helpful assistant.\",\n",
     "    max_tokens = 256,\n",
     "    temperature = 0.7,\n",
+    "    llm_provider = \"ai_studio\",\n",
+    "    api_key = \"<your api key>\"\n",
     ")\n",
-    "\n",
-    "# You can put your keys above, but for security I load mine from .env\n",
-    "env_config = ChatConfig.from_env()\n",
-    "config.llm_provider = env_config.llm_provider\n",
-    "config.api_key = env_config.api_key\n",
-    "config.model_url = env_config.model_url\n",
     "\n",
     "llm = LLMProvider.from_config(config)\n",
     "dqm = DocumentQueryModel.from_config(config)\n",
